# message-hideyoshi.com

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml  test-build.yml
proc-utils/: Cargo.toml
proc-utils/src/: lib.rs
src/: main.rs  route.rs
src/config/: config_auth.rs  config_email.rs  config_limits.rs  config_redis.rs  config_server.rs  mod.rs
src/depends/: depends_auth_service.rs  depends_email_service.rs  depends_redis_client.rs  mod.rs
src/handler/: health.rs  message.rs
src/middleware/: auth_middleware.rs
src/model/: generic_response.rs  mod.rs  send_message.rs
src/service/: auth_service.rs  email_service.rs  mod.rs
src/utils/: mod.rs  router_builder.rs
utils/src/: lib.rs
