workspace = { members = ["proc-utils", "utils"] }
[package]
name = "message-hideyoshi-com"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-utils = { path = "proc-utils" }
utils = { path = "utils" }

axum = "0.7.4"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
uuid = "1.7.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_with = "3.6.1"
chrono = { version = "0.4.34", features = ["serde"] }
