[package]
name = "message-hideyoshi-com"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.0.0", features = ["full"] }
uuid = "1.7.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_with = "3.6.1"
chrono = { version = "0.4.34", features = ["serde"] }
headers = "0.4.0"
http = "1.0.0"
reqwest = "0.11.24"
serde_json = "1.0.114"
cached = "0.49.2"
dotenv = "0.15.0"
log = "0.4.20"
lettre = { version = "0.11.4", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "builder"] }
redis = { version = "0.24.0", features = ["aio", "tokio-comp"] }
